// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateStructuredOutputHook > generates hook with correct type and fetch url 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { useState } from 'react'
import type { Output } from '~/lib/schemas/output.schema'

export function useOutput() {
  const [result, setResult] = useState<Output | null>(null)
  const [loading, setLoading] = useState(false)
  const [error, setError] = useState<string | null>(null)

  async function generate(input: string) {
    setLoading(true)
    setError(null)
    try {
      const res = await fetch('/api/structured-output', {
        method: 'POST',
        headers: { 'Content-Type': 'application/json' },
        body: JSON.stringify({ input }),
      })
      if (!res.ok) throw new Error(\`Request failed: \${res.status}\`)
      setResult(await res.json())
    } catch (err) {
      setError(err instanceof Error ? err.message : 'Unknown error')
    } finally {
      setLoading(false)
    }
  }

  return { result, loading, error, generate }
}
"
`;

exports[`generateStructuredOutputHook > strips src/ prefix from schema import and api url 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { useState } from 'react'
import type { Output } from '~/lib/schemas/output.schema'

export function useOutput() {
  const [result, setResult] = useState<Output | null>(null)
  const [loading, setLoading] = useState(false)
  const [error, setError] = useState<string | null>(null)

  async function generate(input: string) {
    setLoading(true)
    setError(null)
    try {
      const res = await fetch('/api/structured-output', {
        method: 'POST',
        headers: { 'Content-Type': 'application/json' },
        body: JSON.stringify({ input }),
      })
      if (!res.ok) throw new Error(\`Request failed: \${res.status}\`)
      setResult(await res.json())
    } catch (err) {
      setError(err instanceof Error ? err.message : 'Unknown error')
    } finally {
      setLoading(false)
    }
  }

  return { result, loading, error, generate }
}
"
`;

exports[`generateStructuredOutputHook > uses custom schema name for hook and type 1`] = `
"// Generated by ai-wingman — edit freely, you own this file.

import { useState } from 'react'
import type { Filter } from '~/lib/schemas/filter.schema'

export function useFilter() {
  const [result, setResult] = useState<Filter | null>(null)
  const [loading, setLoading] = useState(false)
  const [error, setError] = useState<string | null>(null)

  async function generate(input: string) {
    setLoading(true)
    setError(null)
    try {
      const res = await fetch('/api/filter', {
        method: 'POST',
        headers: { 'Content-Type': 'application/json' },
        body: JSON.stringify({ input }),
      })
      if (!res.ok) throw new Error(\`Request failed: \${res.status}\`)
      setResult(await res.json())
    } catch (err) {
      setError(err instanceof Error ? err.message : 'Unknown error')
    } finally {
      setLoading(false)
    }
  }

  return { result, loading, error, generate }
}
"
`;
